--- a/examples/Lecture04/index.html
+++ b/examples/Lecture04/index.html
@@ -2,7 +2,7 @@
 <html ng-app="myFirstApp">
   <head>
     <meta charset="utf-8">
-    <script src="angular.min.js"></script>
+    <script src="node_modules/angular/angular.min.js"></script>
     <script src="app.js"></script>
     <title>My first AngularJS App</title>
   </head>
