--- a/examples/Lecture05/beginning-of-lecture-code/index.html
+++ b/examples/Lecture05/beginning-of-lecture-code/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <div ng-controller="MyFirstController">
-
+      <p>{{name}}</p>
+      <p>{{sayHello()}}</p>
+      <input type="text" ng-model="name" />
     </div>
   </body>
 </html>
