--- a/examples/Lecture07/beginning-of-lecture-code/index.html
+++ b/examples/Lecture07/beginning-of-lecture-code/index.html
@@ -7,11 +7,19 @@
   <body>
     <h1>HTML5 Custom Attributes</h1>
 
-    <div id="target">
+    <div id="target" greeting="sure is">
       <section>Section 1
         <article>Article 1</article>
       </section>
     </div>
+    <script>
+      let e = document.getElementById('target')
+      console.log(e)
+      console.log(e.getAttribute('greeting'))
+      let ge = document.querySelector('[greeting]')
+      console.log(ge)
+      
+    </script>
 
   </body>
 </html>
