--- a/examples/Lecture09/beginning-of-lecture-code/index.html
+++ b/examples/Lecture09/beginning-of-lecture-code/index.html
@@ -12,7 +12,7 @@
         (and AngularJS)</h1>
     <div ng-controller='DIController'>
       <input type="text"
-             ng-model="name">
+             ng-model="name" ng-blur="toUpper()">
     </div>
   </body>
 </html>
