--- a/examples/Lecture11/beginning-of-lecture-code/part2/index.html
+++ b/examples/Lecture11/beginning-of-lecture-code/part2/index.html
@@ -12,6 +12,10 @@
     <div ng-controller='MsgController'>
       {{name}} has a message for you: <br>
       {{sayMessage()}}
+      <div>
+    <button ng-click="feed()">food? sure!</button><br />
+        <img ng-src="images/yaakov_{{stateOfBeing}}.png" />
+      </div>
     </div>
   </body>
 </html>
