--- a/examples/Lecture13/beginning-of-lecture-code/part2/index.html
+++ b/examples/Lecture13/beginning-of-lecture-code/part2/index.html
@@ -11,6 +11,7 @@
     <h1>Custom Filters</h1>
     <div ng-controller='MsgController'>
       {{sayMessage()}} <br>
+      Loves: {{sayLovesMessage()}} <br>
       <div>
         <button ng-click="feedYaakov()">Feed Yaakov</button>
         <br>
