--- a/examples/Lecture14/beginning-of-lecture-code/index.html
+++ b/examples/Lecture14/beginning-of-lecture-code/index.html
@@ -13,7 +13,13 @@
       <button ng-click="showNumberOfWatchers()">
         Log # of Watchers</button>
       <div>
-
+      <button ng-click="count()">
+        Increment Count</button>
+      <button ng-click="countOnce()">
+        count to 1</button>
+        <span id="count"></span>
+        <div>once: {{ onceCounter }}<br/> count: {{counter}}</div>
+        <input type="text" ng-model="name" />
       </div>
     </div>
   </body>
