--- a/examples/Lecture32/index.html
+++ b/examples/Lecture32/index.html
@@ -26,8 +26,9 @@
         title="{{list.title}}"
         on-remove="list.removeItem(index)">
 
+<!-- transclusion -->
         <span class="warning">WARNING! WARNING! {{list.warning}}</span>
-
+<!-- /end transclustion -->
       </shopping-list>
 
       <shopping-list
@@ -35,12 +36,12 @@
         items="list.items"
         title="{{list.title}}"
         on-remove="list.removeItem(index)">
-
+<!-- transclusion -->
         <div>
           <div class="title">OH, THE HORROR!</div>
           <div>{{list.warning}}</div>
         </div>
-
+<!-- /end transclustion -->
       </shopping-list>
 
     </div>
